hphp/hack/test/typecheck/expression_trees/self_static_method_call.php.like_types.exp
File "self_static_method_call.php", line 13, characters 22-30:
Static method calls in expression trees require explicit class names. (Parsing[1002])
